feat: add documentation delete and create opening
