# handler/createOpening.go
@@ -6,6 +6,19 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/tmazleo/opportunities/schemas"
 )
+// @BasePath /api/v1
+
+// @Summary Create opening
+// @Schemes
+// @Description Create a new job opening 
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param request body CreateOpeningRequest true "Request body"
+// @Success 200 {object} CreateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [post]
 
 func CreateOpeningHandler(ctx *gin.Context) {
 	request := CreateOpeningRequest{}
