# handler/deleteOpening.go
@@ -6,8 +6,22 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/tmazleo/opportunities/schemas"
+	
 )
 
+// @BasePath /api/v1
+
+// @Summary Delete opening
+// @Schemes
+// @Description Delete a new job opening 
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening identification"
+// @Success 200 {object} DeleteOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [delete]
 func DeleteOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
