# handler/response.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/tmazleo/opportunities/schemas"
 )
 
 func sendError(ctx *gin.Context, code int, msg string) {
@@ -20,4 +21,17 @@ func sendSuccess(ctx *gin.Context, op string, data interface{}){
 		"message":fmt.Sprintf("operation from handler: %s successful ", op),
 		"data" : data,
 	})
+}
+type ErrorResponse struct {
+	Message string `json: "message"`
+	ErrorCode string `json: "errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string `json: "message"`
+	Data schemas.OpeningResponse `json: "data"`
+}
+type DeleteOpeningResponse struct {
+	Message string `json: "message"`
+	Data schemas.OpeningResponse `json: "data"`
 }
